--- a/app.json
+++ b/app.json
@@ -1,15 +1,20 @@
 {
   "expo": {
-    "name": "Y",
+    "name": "UCD_RN_Performance",
     "slug": "UCD_RN_Performance",
     "privacy": "public",
     "sdkVersion": "33.0.0",
+    "android": {
+      "package": "com.miguelbragagomes.ucd_rn_performance",
+      "permissions": [],
+      "versionCode": 2
+    },
     "platforms": [
       "ios",
       "android",
       "web"
     ],
-    "version": "1.0.0",
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -25,6 +30,7 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": ""
   }
 }
