--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "expo": "^33.0.0",
     "expo-av": "^8.0.0",
+    "expo-calendar": "~5.0.1",
+    "expo-speech": "~5.0.2",
     "react": "16.8.3",
     "react-dom": "^16.12.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
